생활코딩 WEB2 CSS 수업 & 복습용 미니프로젝트

--- a/2.html
+++ b/2.html
@@ -3,50 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>WEB1-CSS</title>
-        <style>
-            body{
-                margin: 0px;
-            }
-            a{
-                color: black;
-                text-decoration: none;
-            }
-            h1{
-                font-size: 45px;
-                text-align: center;
-                border-bottom: 1px solid gray;
-                margin:0px;
-                padding: 20px;
-            }
-            ol{
-               border-right: 1px gray solid;
-               padding: 30px;
-               margin: 0px;
-               width: 100px;
-            }
-            #grid{
-                display: grid;
-                grid-template-columns: 150px 1fr;
-            }
-            #gird ol{
-                padding: 33px;
-            }
-            #grid #article{
-                padding-left: 25px;
-            }
-            @media (max-width:600px) {
-                ol{
-                    border-right: none;
-                }
-                #grid{
-                    display: block;
-                }
-                h1{
-                    border-bottom: none;
-                }
-
-            }
-        </style>
+        <link rel="styleSheet" href="style.css">
     </head>
     <body>        
         <h1><a href="index.html">WEB</a></h1>
