--- a/3.html
+++ b/3.html
@@ -3,15 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>WEB1-javascript</title>
+        <link rel="styleSheet" href="style.css">
     </head>
     <body>
         <h1><a href="index.html">WEB</a></h1>
+        <div id="grid">
         <ol>
             <li><a href="1.html">Html</a></li>
             <li><a href="2.html">CSS</a></li>
             <li><a href="3.html">javascript</a></li>
         </ol>
-         <h2>javascript</h2>
+        <div id="article"> 
+        <h2>javascript</h2>
         <p>
             JavaScript , often abbreviated JS, is a programming language that is one of the core technologies of the World Wide Web, alongside HTML and CSS.[11] Over 97% of websites use JavaScript on the client side for web page behavior,[12] often incorporating third-party libraries.[13] All major web browsers have a dedicated JavaScript engine to execute the code on users' devices.
 
@@ -23,6 +26,7 @@ JavaScript engines were originally used only in web browsers, but are now core c
 
 Although Java and JavaScript are similar in name, syntax, and respective standard libraries, the two languages are distinct and differ greatly in design.
         </p>
-
+        </div>
+        </div>
     </body>
 </html>
