--- a/index.html
+++ b/index.html
@@ -3,24 +3,28 @@
     <head>
         <meta charset="utf-8">
         <title>WEB1-Welcome</title>
+        <link rel="styleSheet" href="style.css">
     </head>
     <body>
         <h1><a href="index.html">WEB</a></h1>
-        <ol>
-            <li><a href="1.html">Html</a></li>
-            <li><a href="2.html">CSS</a></li>
-            <li><a href="3.html">javascript</a></li>
-        </ol>
-         <h2>WEB</h2>
-        <p>
-            Web is a computer programming system created by Donald E. Knuth as the first implementation of what he called "literate programming": the idea that one could create software as works of literature, by embedding source code inside descriptive text, rather than the reverse (as is common practice in most programming languages), in an order that is convenient for exposition to human readers, rather than in the order demanded by the compiler.[1]
+        <div id="grid">
+            <ol>
+                <li><a href="1.html">Html</a></li>
+                <li><a href="2.html">CSS</a></li>
+                <li><a href="3.html">javascript</a></li>
+            </ol>
+            <div id="article"> 
+                <h2>WEB</h2>
+                <p>
+                    Web is a computer programming system created by Donald E. Knuth as the first implementation of what he called "literate programming": the idea that one could create software as works of literature, by embedding source code inside descriptive text, rather than the reverse (as is common practice in most programming languages), in an order that is convenient for exposition to human readers, rather than in the order demanded by the compiler.[1]
 
-Web consists of two secondary programs: TANGLE, which produces compilable Pascal code from the source texts, and WEAVE, which produces nicely-formatted, printable documentation using TeX.
+        Web consists of two secondary programs: TANGLE, which produces compilable Pascal code from the source texts, and WEAVE, which produces nicely-formatted, printable documentation using TeX.
 
-CWEB is a version of Web for the C programming language, while noweb is a separate literate programming tool, which is inspired by Web (as reflected in the name) and which is language agnostic.
+        CWEB is a version of Web for the C programming language, while noweb is a separate literate programming tool, which is inspired by Web (as reflected in the name) and which is language agnostic.
 
-The most significant programs written in Web are TeX and Metafont. Modern TeX distributions use another program Web2C to convert Web source to C.
-        </p>
-
+        The most significant programs written in Web are TeX and Metafont. Modern TeX distributions use another program Web2C to convert Web source to C.
+                </p>
+            </div>
+        </div>
     </body>
 </html>
